fixed issue with burger menu on IOS

--- a/app-next/app/components/header/page.module.css
+++ b/app-next/app/components/header/page.module.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding-right: 20px;
   width: 100%;
   z-index: 3500;
   background-color: rgba(0, 0, 0, 0.9);
@@ -12,8 +12,9 @@
 }
 
 .header__logoImage {
-  width: 50px;
+  width: 75px;
   height: auto;
+  transform: rotate(45deg);
 }
 
 .header__title {
@@ -50,7 +51,7 @@
 
 .header__link {
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: 900;
   color: #fff;
   -webkit-text-stroke: 0.5px #000;
   text-transform: uppercase;
@@ -66,12 +67,18 @@
   background: none;
   border: none;
   cursor: pointer;
-  padding: 0;
-  z-index: 2001;
+  z-index: 10001;
   min-width: 25px;
 }
 
-.header__burger span {
+.header__burger::before, .header__burger::after {
+  content: "";
+  display: block;
+  height: 25px;
+  background: black;
+}
+
+.header__line {
   display: block;
   height: 3px;
   background: #fff;
@@ -79,15 +86,15 @@
   transition: all 0.3s ease;
 }
 
-.header__burger.open span:nth-child(1) {
+.header.open span:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
 }
 
-.header__burger.open span:nth-child(2) {
+.header.open span:nth-child(2) {
   opacity: 0;
 }
 
-.header__burger.open span:nth-child(3) {
+.header.open span:nth-child(3) {
   transform: rotate(-45deg) translate(7px, -7px);
 }
 
@@ -95,6 +102,7 @@
   .header {
     transition: background-color 0.5s ease, box-shadow 0.5s ease;
     background: none;
+    padding: 1rem;
   }
   .header.scrolled {
     background-color: rgba(0, 0, 0, 0.6);
@@ -116,7 +124,7 @@
     margin-top: 0;
   }
   .header__link {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 900;
     list-style: none;
   }
@@ -124,7 +132,7 @@
     padding-left: 10rem;
   }
   .header__logoImage {
-    width: 75px;
+    width: 100px;
     height: auto;
   }
   .header__title {
