--- a/app-next/app/main/page.module.css
+++ b/app-next/app/main/page.module.css
@@ -85,13 +85,7 @@
   display: flex;
   flex-direction: column;
   z-index: 1500;
-  gap: 5rem;
-}
-
-@media (min-width: 760px) {
-  .databox {
-    gap: 10rem;
-  }
+  gap: 10rem;
 }
 
 .bgvideo {
